--- a/index.html
+++ b/index.html
@@ -87,59 +87,37 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4">
                     <div class="experience-card">
-                        <div class="card-image" style="background-image: url('./imgs/actividades/deltapaseo.jpg')"></div>
+                        <div class="card-image" style="background-image: url('./imgs/productos/havanna.svg')"></div>
                         <div class="card-content">
-                            <h3 data-i18n="activities.boat">Paseos en Lancha</h3>
-                            <p data-i18n="activities.boatDesc">Descubrí una experiencia auténtica, exclusiva y natural en el Delta del Tigre. Accedé a circuitos fuera del mapa turístico tradicional, diseñados para quienes buscan paz, belleza y conexión real con la naturaleza.</p>
-                            <div class="card-hover-content">
-                                <ul class="features-list">
-                                    <li><i class="fas fa-clock" style="margin-right: 2vh;"></i> <span data-i18n="activities.duration">Duración</span></li>
-                                    <li><i class="fas fa-users" style="margin-right: 2vh;"></i> <span data-i18n="activities.people">Hasta 8 personas</span></li>
-                                    <li><i class="fas fa-map-marked-alt" style="margin-right: 2vh;"></i> <span data-i18n="activities.route">Ruta personalizada</span></li>
-                                </ul>
-                                <a href="#" class="btn btn-gold">
-                                    <span data-i18n="activities.book">Reservar Ahora</span>
-                                </a>
-                            </div>
+                            <h3 data-i18n="activities.boat">HAVANNA</h3>
+                            <p data-i18n="activities.boatDesc">texto</p>
+                            <a href="#" class="btn btn-gold">
+                                <span data-i18n="activities.book">Más información</span>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="experience-card">
-                        <div class="card-image" style="background-image: url('./imgs/actividades/sunset.jpg')"></div>
+                        <div class="card-image" style="background-image: url('./imgs/productos/axion.svg')"></div>
                         <div class="card-content">
-                            <h3 data-i18n="activities.tours">Atardecer & Luna naciente</h3>
-                            <p data-i18n="activities.toursDesc">Navegamos hacia un rincón del Delta donde el sol se pone en el horizonte y la luna aparece con el perfil de la ciudad de trasfondo. Todo desde la lancha, con un trago en mano y tapas para compartir. Una experiencia mágica y visualmente inolvidable.</p>
-                            <div class="card-hover-content">
-                                <ul class="features-list">
-                                    <li><i class="fas fa-clock" style="margin-right: 2vh;"></i> <span data-i18n="activities.duration">Duración</span></li>
-                                    <li><i class="fas fa-users" style="margin-right: 2vh;"></i> <span data-i18n="activities.groups">Grupos pequeños</span></li>
-                                    <li><i class="fas fa-camera" style="margin-right: 2vh;"></i> <span data-i18n="activities.photo">Fotografía incluida</span></li>
-                                </ul>
-                                <a href="#" class="btn btn-gold">
-                                    <span data-i18n="activities.book">Reservar Ahora</span>
-                                </a>
-                            </div>
+                            <h3 data-i18n="activities.tours">AXION</h3>
+                            <p data-i18n="activities.toursDesc">texto</p>
+                            <a href="#" class="btn btn-gold">
+                                <span data-i18n="activities.book">Más información</span>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="experience-card">
-                        <div class="card-image" style="background-image: url('./imgs/actividades/comidavino.jpg')"></div>
+                        <div class="card-image" style="background-image: url('./imgs/productos/ypg.svg')"></div>
                         <div class="card-content">
-                            <h3 data-i18n="activities.dinner">Navegación y almuerzo privado en una casa de ensueño</h3>
-                            <p data-i18n="activities.dinnerDesc">Disfruta de una experiencia culinaria exclusiva en el corazón del río.</p>
-                            <div class="card-hover-content">
-                                <ul class="features-list">
-                                    <li><i class="fas fa-clock" style="margin-right: 2vh;"></i> <span data-i18n="activities.duration">Duración</span></li>
-                                    <li><i class="fas fa-utensils" style="margin-right: 2vh;"></i> <span data-i18n="activities.options">Almuerzo de 3 pasos, solo para vos y tu grupo con todo incluido.</span></li>
-                                    <li><i class="fas fa-ship" style="margin-right: 2vh;"></i> <span data-i18n="activities.menu">Navegación por los canales del delta de aprox. 3 horas</span></li>
-                                    <li><i class="fas fa-sun" style="margin-right: 2vh;"></i> <span data-i18n="activities.wine">Parada para ver el atardecer y la aparición de la luna en aquellos días en los que se deja ver.<span></li>
-                                </ul>
-                                <a href="#" class="btn btn-gold">
-                                    <span data-i18n="activities.book">Reservar Ahora</span>
-                                </a>
-                            </div>
+                            <h3 data-i18n="activities.dinner">YPF</h3>
+                            <p data-i18n="activities.dinnerDesc">texto</p>
+                            <a href="#" class="btn btn-gold">
+                                <span data-i18n="activities.book">Más información</span>
+                            </a>
                         </div>
                     </div>
                 </div>
