--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4">
                     <div class="experience-card">
-                        <div class="card-image" style="background-image: url('./imgs/productos/havanna.svg')"></div>
+                        <div class="card-image" style="background-image: url('./imgs/productos/havanna.png')"></div>
                         <div class="card-content">
                             <h3 data-i18n="activities.boat">HAVANNA</h3>
                             <p data-i18n="activities.boatDesc">texto</p>
