--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
             <!-- Columna 1: Qué ofrecemos -->
             <div class="col-md-6 mb-4">
                 <div class="card h-100" style="background-color: rgb(29, 29, 29);">
-                    <img src="./imgs/productos/maquina_blanca.svg" alt="Foto de Antonio" class="card-img-top" style="object-fit: cover; object-position: center; height: 40vh;">
+                    <img src="./imgs/productos/maquineleganenegra.svg" alt="MaquinaNegra" class="card-img-top" style="object-fit: cover; object-position: center; height: 40vh;">
                     <div class="card-body">
-                        <h3 class="section-title" style="font-size: 2rem; color: #BB9E4A;" data-i18n="summary.offerTitle">¿Qué ofrecemos?</h3>
+                        <h3 class="section-title" style="font-size: 2rem; color: #58802C;" data-i18n="summary.offerTitle">Equipo Elegante Negro</h3>
                         <p class="lead text-white" style="font-size: 1rem;" data-i18n="summary.offerText">
-                            Experiencias privadas por el Delta menos explorado, rodeados de naturaleza, silencio y belleza. Nuestros paseos incluyen la posibilidad de disfrutar un almuerzo, merienda, atardecer o salida de la luna. Calidad, atención cálida, cupos limitados para que cada experiencia sea única.
+                            Equipo atrapa insectos de diseño tipo plafón, ideal para espacios donde se prioriza la estética y la discreción. Cuenta con 2 tubos UV fluorescentes y sistema de balasto, con opción disponible en tubos UV LED de bajo consumo.
+                            <br><br>
+                            A diferencia de los modelos frontales, los tubos se encuentran ubicados en la parte superior, lo que reduce el área de atracción pero permite un diseño más elegante, con plancha adhesiva y tubos ocultos, evitando la visualización de los insectos capturados.
+                            <br><br>
+                            Cobertura estimada: hasta 30–40 m².
+                            <br><br>
+                            Ideal para comercios, restaurantes, oficinas y áreas de atención al público.
                         </p>
                     </div>
                 </div>
@@ -69,11 +75,19 @@
             <!-- Columna 2: Quién soy -->
             <div class="col-md-6 mb-4">
                 <div class="card h-100" style="background-color: rgb(29, 29, 29);">
-                    <img src="./imgs/productos/maquineleganenegra.svg" alt="Foto de Antonio" class="card-img-top" style="object-fit: cover; object-position: center; height: 40vh;">
+                    <img src="./imgs/productos/maquina_blanca.svg" alt="MaquinaBlanca" class="card-img-top" style="object-fit: cover; object-position: center; height: 40vh;">
                     <div class="card-body">
-                        <h3 class="section-title" style="font-size: 2rem; color: #BB9E4A;" data-i18n="summary.aboutTitle">¿Quién soy?</h3>
+                        <h3 class="section-title" style="font-size: 2rem; color: #58802C;" data-i18n="summary.aboutTitle">Equipo Industrial Blanco</h3>
                         <p class="lead text-white" style="font-size: 1rem;" data-i18n="summary.aboutText">
-                            Soy Antonio, tu guía por el Delta y apasionado de sus secretos mejor guardados. Pero no estoy solo: detrás de cada experiencia hay un equipo comprometido que cuida cada detalle para ofrecerte un paseo único, donde puedas desconectarte, respirar aire puro y redescubrir el mundo silvestre... sin multitudes.
+                            Máquina atrapa insectos UV con plancha adhesiva
+                            <br><br>
+                            Equipo diseñado para el control higiénico de insectos voladores en interiores. Funciona mediante atracción por luz UV y captura en plancha adhesiva, sin explosión de insectos ni contaminación del ambiente.
+                            <br><br>
+                            Cuenta con 2 tubos UV fluorescentes y sistema de balasto incorporado. También disponible en versión con 2 tubos UV LED, de mayor eficiencia y bajo consumo.
+                            <br><br>
+                            Cobertura estimada: hasta 60 m².
+                            <br><br>
+                            Ideal para cocinas, depósitos, comercios, industrias alimenticias y áreas de manipulación de alimentos..
                         </p>
                     </div>
                 </div>
