--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                             <br><br>
                             Ideal para comercios, restaurantes, oficinas y áreas de atención al público.
                         </p>
+                        <a href="#" class="btn btn-gold">
+                            <span data-i18n="activities.book">Más información</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -89,6 +92,10 @@
                             <br><br>
                             Ideal para cocinas, depósitos, comercios, industrias alimenticias y áreas de manipulación de alimentos..
                         </p>
+                        
+                        <a href="#" class="btn btn-gold">
+                            <span data-i18n="activities.book">Más información</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -104,10 +111,10 @@
                         <div class="card-image" style="background-image: url('./imgs/productos/havanna.png')"></div>
                         <div class="card-content">
                             <h3 data-i18n="activities.boat">HAVANNA</h3>
-                            <p data-i18n="activities.boatDesc">texto</p>
-                            <a href="#" class="btn btn-gold">
-                                <span data-i18n="activities.book">Más información</span>
-                            </a>
+                            <p data-i18n="activities.boatDesc">Contamos con una <b>relación comercial de más de 10 años</b> junto a Havanna, brindando un servicio en formato <b>comodato mensual</b>. <br><br>
+                                
+                                Actualmente tenemos <b>más de 50 equipos instalados</b>, cumpliendo mes a mes con los estándares de calidad y mantenimiento requeridos.
+                                </p>
                         </div>
                     </div>
                 </div>
@@ -116,10 +123,10 @@
                         <div class="card-image" style="background-image: url('./imgs/productos/axion.svg')"></div>
                         <div class="card-content">
                             <h3 data-i18n="activities.tours">AXION</h3>
-                            <p data-i18n="activities.toursDesc">texto</p>
-                            <a href="#" class="btn btn-gold">
-                                <span data-i18n="activities.book">Más información</span>
-                            </a>
+                            <p data-i18n="activities.toursDesc">Cliente con una  <b>relación comercial de 5 años</b>, en constante crecimiento.
+                                <br><br>
+                                Hoy brindamos servicio mensual con <b>equipos instalados en más de 30 estaciones</b>, acompañando su expansión y manteniendo un servicio continuo y confiable.
+                                </p>
                         </div>
                     </div>
                 </div>
@@ -128,12 +135,21 @@
                         <div class="card-image" style="background-image: url('./imgs/productos/ypg.svg')"></div>
                         <div class="card-content">
                             <h3 data-i18n="activities.dinner">YPF</h3>
-                            <p data-i18n="activities.dinnerDesc">texto</p>
-                            <a href="#" class="btn btn-gold">
-                                <span data-i18n="activities.book">Más información</span>
-                            </a>
+                            <p data-i18n="activities.dinnerDesc">Relación comercial de <b>más de 20 años, ofreciendo equipos en comodato mensual</b> a gran escala.
+                                <br>
+                                <br>
+                                Llegamos a tener <b>más de 400 equipos instalados</b>, sosteniendo un servicio eficiente, constante y adaptado a sus necesidades operativas.
+                            </p>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-12">
+                    <p class="text-center lead" style="max-width:700px; margin:2rem auto 0 auto; font-size:1.1rem;">
+                        Todos nuestros equipos pueden contratarse en <em>formato comodato</em>, que incluye servicio mensual, recambio de planchas adhesivas, reposición de tubos UV en caso de fallas y limpieza del equipo.<br><br>
+                        También ofrecemos la <em>venta directa del equipo</em>, quedando el mantenimiento a cargo del cliente.
+                    </p>
                 </div>
             </div>
         </div>
