agrego estilos cards

--- a/index.html
+++ b/index.html
@@ -59,15 +59,21 @@
                     <img src="./imgs/productos/maquineleganenegra.svg" alt="MaquinaNegra" class="card-img-top" style="object-fit: cover; object-position: center; height: 40vh;">
                     <div class="card-body">
                         <h3 class="section-title" style="font-size: 2rem; color: #58802C;" data-i18n="summary.offerTitle">Equipo Elegante Negro</h3>
-                        <p class="lead text-white" style="font-size: 1rem;" data-i18n="summary.offerText">
-                            Equipo atrapa insectos de diseño tipo plafón, ideal para espacios donde se prioriza la estética y la discreción. Cuenta con 2 tubos UV fluorescentes y sistema de balasto, con opción disponible en tubos UV LED de bajo consumo.
-                            <br><br>
-                            A diferencia de los modelos frontales, los tubos se encuentran ubicados en la parte superior, lo que reduce el área de atracción pero permite un diseño más elegante, con plancha adhesiva y tubos ocultos, evitando la visualización de los insectos capturados.
-                            <br><br>
-                            Cobertura estimada: hasta 30–40 m².
-                            <br><br>
-                            Ideal para comercios, restaurantes, oficinas y áreas de atención al público.
-                        </p>
+                        <div class="expandable-text-wrapper">
+                            <p class="lead text-white expandable-text" style="font-size: 1rem;" data-i18n="summary.offerText">
+                                Equipo atrapa insectos de diseño tipo plafón, ideal para espacios donde se prioriza la estética y la discreción. Cuenta con 2 tubos UV fluorescentes y sistema de balasto, con opción disponible en tubos UV LED de bajo consumo.
+                                <br><br>
+                                A diferencia de los modelos frontales, los tubos se encuentran ubicados en la parte superior, lo que reduce el área de atracción pero permite un diseño más elegante, con plancha adhesiva y tubos ocultos, evitando la visualización de los insectos capturados.
+                                <br><br>
+                                Cobertura estimada: hasta 30–40 m².
+                                <br><br>
+                                Ideal para comercios, restaurantes, oficinas y áreas de atención al público.
+                            </p>
+                            <button class="btn-expand-mobile d-md-none" aria-label="Expandir texto">
+                                <span class="expand-text">+ Ver más</span>
+                                <span class="collapse-text" style="display: none;">- Ver menos</span>
+                            </button>
+                        </div>
                         <a href="#" class="btn btn-gold">
                             <span data-i18n="activities.book">Más información</span>
                         </a>
@@ -81,17 +87,23 @@
                     <img src="./imgs/productos/maquina_blanca.svg" alt="MaquinaBlanca" class="card-img-top" style="object-fit: cover; object-position: center; height: 40vh;">
                     <div class="card-body">
                         <h3 class="section-title" style="font-size: 2rem; color: #58802C;" data-i18n="summary.aboutTitle">Equipo Industrial Blanco</h3>
-                        <p class="lead text-white" style="font-size: 1rem;" data-i18n="summary.aboutText">
-                            Máquina atrapa insectos UV con plancha adhesiva
-                            <br><br>
-                            Equipo diseñado para el control higiénico de insectos voladores en interiores. Funciona mediante atracción por luz UV y captura en plancha adhesiva, sin explosión de insectos ni contaminación del ambiente.
-                            <br><br>
-                            Cuenta con 2 tubos UV fluorescentes y sistema de balasto incorporado. También disponible en versión con 2 tubos UV LED, de mayor eficiencia y bajo consumo.
-                            <br><br>
-                            Cobertura estimada: hasta 60 m².
-                            <br><br>
-                            Ideal para cocinas, depósitos, comercios, industrias alimenticias y áreas de manipulación de alimentos..
-                        </p>
+                        <div class="expandable-text-wrapper">
+                            <p class="lead text-white expandable-text" style="font-size: 1rem;" data-i18n="summary.aboutText">
+                                Máquina atrapa insectos UV con plancha adhesiva
+                                <br><br>
+                                Equipo diseñado para el control higiénico de insectos voladores en interiores. Funciona mediante atracción por luz UV y captura en plancha adhesiva, sin explosión de insectos ni contaminación del ambiente.
+                                <br><br>
+                                Cuenta con 2 tubos UV fluorescentes y sistema de balasto incorporado. También disponible en versión con 2 tubos UV LED, de mayor eficiencia y bajo consumo.
+                                <br><br>
+                                Cobertura estimada: hasta 60 m².
+                                <br><br>
+                                Ideal para cocinas, depósitos, comercios, industrias alimenticias y áreas de manipulación de alimentos..
+                            </p>
+                            <button class="btn-expand-mobile d-md-none" aria-label="Expandir texto">
+                                <span class="expand-text">+ Ver más</span>
+                                <span class="collapse-text" style="display: none;">- Ver menos</span>
+                            </button>
+                        </div>
                         
                         <a href="#" class="btn btn-gold">
                             <span data-i18n="activities.book">Más información</span>
