agrego funcionalidad botones y elimino fondo oscuro

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                         <h3 class="section-title" style="font-size: 2rem; color: #58802C;" data-i18n="summary.offerTitle">Equipo Elegante Negro</h3>
                         <div class="expandable-text-wrapper">
                             <p class="lead text-white expandable-text" style="font-size: 1rem;" data-i18n="summary.offerText">
+                                Máquina atrapa insectos UV con plancha adhesiva
+                                <br><br>
                                 Equipo atrapa insectos de diseño tipo plafón, ideal para espacios donde se prioriza la estética y la discreción. Cuenta con 2 tubos UV fluorescentes y sistema de balasto, con opción disponible en tubos UV LED de bajo consumo.
                                 <br><br>
                                 A diferencia de los modelos frontales, los tubos se encuentran ubicados en la parte superior, lo que reduce el área de atracción pero permite un diseño más elegante, con plancha adhesiva y tubos ocultos, evitando la visualización de los insectos capturados.
