--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/imgs/logo/Favicon.png">
+    <link rel="icon" type="image/png" href="/imgs/logo/favicon.png">
     <!-- Tu CSS personalizado -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
